sizeFixer: overflow hidden; to stop collapsing

--- a/bingo/scss/main.scss
+++ b/bingo/scss/main.scss
@@ -23,12 +23,12 @@ svg {
   position: relative;
   flex-flow: column;
   user-select: none;
+  perspective: -1000px;
   .row {
     // border: 1px solid blue;
     height: 95%;
     display: flex;
     justify-content: space-evenly;
-    user-select: none;
 
     .sizeFixer {
       width: 100%;
@@ -36,7 +36,7 @@ svg {
       display: flex;
       justify-content: center;
       align-items: center;
-      user-select: none;
+      overflow: hidden;
     }
 
     .tile {
@@ -45,7 +45,6 @@ svg {
       height: 90%;
       justify-content: center;
       align-items: center;
-      user-select: none;
       &.hide {
         display: none;
       }
@@ -71,11 +70,11 @@ svg {
   width: 30vw;
   height: 5vh;
   margin: auto;
+  user-select: none;
   button {
     width: 100%;
     height: 100%;
     background-color: #9b7b7b;
-    user-select: none;
     &:hover {
       background-color: darken($color: #9b7b7b, $amount: 30);
     }
